this is about me update

--- a/about-me.html
+++ b/about-me.html
@@ -5,9 +5,26 @@
 			<link rel="stylesheet" type="text/css" href="about-me.css">
 		</head>
 		<body>
+			<div class="container_12 clearfix">
+			<div id="header" class="grid_12">	
 			<h1>Nathaniel Epps</h1>
+			
+			<nav>
+			<ul id="nav">
+
+				<li><a href="">Home</a></li>
+				<li><a href="guessing.html">Guessing Game</a></li>
+				<li><a href="Interests.html">Interests</a></li>
+				<li><a href="contactme.html">Contact Me</a></li>
+			</ul>	
+			</nav>
+		
 			<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-			<h1><img src="http://cliparts.co/cliparts/6ip/6x6/6ip6x6eMT.png" alt="Palm" width="156" height="295"; align="right" ></h1>
+
+			<h1>
+					<img src="http://cliparts.co/cliparts/6ip/6x6/6ip6x6eMT.png" alt="Palm" width="156" height="295"; align="right" >
+			</h1>
+
 			<h2>Early Life!</h2>
 			<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 			<ul>
@@ -21,6 +38,6 @@
 			<h2>Returning Home!</h2>
 			<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>	
 			<p> I returned to OR with a great appreciation for travel, once home I finished my Marketing degree and started working for Reebok in their Global Retail department, I have had a plethora of jobs since then, but have always wanted to learn Code, so I signed up for <a href="http://www.codefellows.com"><i>Codefellows</i></a>.</p>	
-
 		</body>
+		
 	</html>
