--- a/contactme.html
+++ b/contactme.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 	<html>
+		<head>
 		<body>
 			<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-			<h1><img src="http://cliparts.co/cliparts/6ip/6x6/6ip6x6eMT.png" alt="Palm" width="156" height="295"; align="right" ></h1
+			<h1>
+
+				<img src="http://cliparts.co/cliparts/6ip/6x6/6ip6x6eMT.png" alt="Palm" width="156" height="295"; align="right" >
+			</h1>
 			<link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 			<title>Forms</title>
 			<link rel="stylesheet" type="text/css" href="contactme.css">
+			<script type="text/javascript">;
+			alert("Please tell me whats on your mind");
+			</script>
+		</head>
 		<h1>We Want to Hear From You!</h1>
+		<p id="nav">
+			<ol>
+				<a href="file:///Users/nathanielepps/Documents/About-Me/about-me.html">Home</a>
+				<a href="file:///Users/nathanielepps/Documents/About-Me/guessing.html">Guessing Game</a>
+				<a href="file:///Users/nathanielepps/Documents/About-Me/interests/Interests.html">Interests</a>
+				<a href="">Contact Me</a>
+			</ol>
 			<h2>Give Us Your Feedback</h2>
 				<h3>
 					<div>
@@ -31,10 +46,16 @@
 						<input type="radio" name="rating" value="no" />
 						No
 					</label>
-					</br>	
+					</br>
 					Please leave us a comment!
 					<textarea name="comments" cols="69" rows="7" align="center">
 					</textarea>
-					<input type="submit"></div>
+
+					<input type="submit"; value="Lets start chatting" onclick= >
+					</div>
 				</h3>
-			</br>
+			</body>
+			<footer>
+				<p>&#169;Nathaniel Epps</p>
+				
+				</footer>
